how cor works: moved headline into it's own row/column to prevent wrapping

--- a/components/Modules/ShopAccordion/shopAccordion.module.scss
+++ b/components/Modules/ShopAccordion/shopAccordion.module.scss
@@ -43,14 +43,14 @@
 
   .itemLabel,
   .itemIndex {
-    color: var(--color-suva-grey)
+    color: var(--color-suva-grey);
   }
 
   .itemLabel {
     padding-left: 64px;
 
     font-size: 30px;
-  } 
+  }
 
   .itemIndex {
     font-size: 14px;
@@ -77,7 +77,7 @@
 .activeItem {
   .itemLabel,
   .itemIndex {
-    color: var(--font-primary)
+    color: var(--font-primary);
   }
 
   .cBorder {
@@ -116,11 +116,11 @@
   color: var(--font-primary);
 
   .items {
-    border-color:var(--font-primary);
+    border-color: var(--font-primary);
   }
 
   .item {
-    border-color:var(--font-primary);
+    border-color: var(--font-primary);
   }
 
   .icon {
@@ -178,12 +178,10 @@
     @media (min-width: $sm) {
       font-size: 3.125rem;
       line-height: 3.4375rem;
-    
     }
     @media (min-width: $md) {
       font-size: 3.4375rem;
       line-height: 3.78125rem;
-     
     }
   }
 }
@@ -238,7 +236,7 @@
       padding-left: 36px;
 
       font-size: 22px;
-      line-height: normal;  
+      line-height: normal;
     }
 
     .content p {
@@ -257,31 +255,31 @@
       flex-direction: column-reverse;
     }
   }
-  
+
   .headline {
     position: absolute;
     top: 0;
     left: 8px;
-  
+
     h2 {
       font-size: 34px;
     }
   }
-  
+
   .item {
     .itemLabel {
       padding-left: 64px;
 
       font-size: 24px;
     }
-  
+
     .content p {
       padding-left: 96.23px;
 
       font-size: 16px;
     }
   }
-  
+
   .primaryImage {
     padding-top: 0;
     margin-top: 85px;
